Fixed sizing of canvas to pixel instead of stretched
More button to toolbar and other minor fixes

--- a/style.css
+++ b/style.css
@@ -11,19 +11,21 @@ section#editor {
 
 aside#toolbar {
     position:absolute;
+    text-align: center;
     left:30px;
-    top:30px;
+    bottom:30px;
     padding:10px;
     border:1px solid grey;
+    border-radius: 5px;
     margin:10px;
     cursor:move;
 }
 
-aside#toolbar {
-    font-size: 2em;
+aside#toolbar .btn {
+    font-size: 24px;
+    padding: 0 6px;
 }
 
-canvas#surface {
-    width:100%;
-    height:100%;
+aside#toolbar hr {
+    margin: 5px 0;
 }
